--- a/src/pages/photos/photos.scss
+++ b/src/pages/photos/photos.scss
@@ -1,10 +1,19 @@
 .search-title {
+  margin: 0;
+  font-size: 60px;
+}
+
+.error-message {
+  font-weight: 600;
+}
+
+.floating-content {
   position: absolute;
   bottom: 40px;
   right: 40px;
   background-color: rgba(0,0,255,0.92);
-  font-size: 60px;
   color: white;
+  text-align: right;
   padding: 0 30px;
   z-index: 1;
 }
